[tool.black]
line-length = 150

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = ["./src"]

[project]
name  = "nich-image-scheduler"
description = "allows adding captions into images and queueing/scheduling them with the assistance of systemd or similar"
requires-python = ">=3.11.2"
version = "0.0.2"
